--- a/PlaygroundHub.xcodeproj/xcshareddata/xcschemes/PlaygroundHub.xcscheme
+++ b/PlaygroundHub.xcodeproj/xcshareddata/xcschemes/PlaygroundHub.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "22F11BD0271D177300E556EB"
-               BuildableName = "Play.app"
+               BuildableName = "PlaygroundHub.app"
                BlueprintName = "PlaygroundHub"
                ReferencedContainer = "container:PlaygroundHub.xcodeproj">
             </BuildableReference>
@@ -45,7 +45,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "22F11BD0271D177300E556EB"
-            BuildableName = "Play.app"
+            BuildableName = "PlaygroundHub.app"
             BlueprintName = "PlaygroundHub"
             ReferencedContainer = "container:PlaygroundHub.xcodeproj">
          </BuildableReference>
@@ -62,7 +62,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "22F11BD0271D177300E556EB"
-            BuildableName = "Play.app"
+            BuildableName = "PlaygroundHub.app"
             BlueprintName = "PlaygroundHub"
             ReferencedContainer = "container:PlaygroundHub.xcodeproj">
          </BuildableReference>
